View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029229 | Open CASCADE | OCCT:Mesh | public | 2017-10-14 18:12 | 2018-06-29 21:19 |
Reporter | dbv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.2.0 | ||||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0029229: Mesh - Crash at Poly_Triangulation::Normal | ||||
Description | Method Poly_Triangulation::Normal crashes due to bad way of construction returning gp_Dir. It creates default gp_Dir(1, 0, 0) and then fills it with methods SetX, SetY, SetZ. Those methods checks resulting norm of vector before changing value and throws exception if it is not good. So if we have normal (0, 0, 1), then Poly_Triangulation::Normal will crash at SetX. | ||||
Steps To Reproduce | Poly_Triangulation tri(1, 1, false); Handle(TShort_HArray1OfShortReal) normals = new TShort_HArray1OfShortReal(1, 3); tri.SetNormals(normals); tri.SetNormal(1, gp_Dir(0, 0, 1)); tri.Normal(1); // Crash | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR29229 has been created by dbv. SHA-1: 4d192d544b6d20ab59babdeeaee83e939ed297d8 Detailed log of new commits: Author: dbv Date: Sat Oct 14 18:14:06 2017 +0300 0029229: Crash at Poly_Triangulation::Normal Fixed creation of returning gp_Dir |
|
Fixed creation of returning gp_Dir Dear Sergey, could you please review patch at branch CR29229. |
|
While you near the lines - could you please also fix buggy method definition (erroneous const at returned gp_Dir)?const gp_Dir Poly_Triangulation::Normal |
|
Branch CR29229 has been updated forcibly by dbv. SHA-1: 14f5f9a1e551460b60cffefc7cf48a0b3d202409 |
|
Fixed |
|
Reviewed. Please, test and integrate. |
|
Combination - OCCT branch : CR29229 SHA-1: 14f5f9a1e551460b60cffefc7cf48a0b3d202409 Products branch : master was compiled on Linux, MacOS and Windows platforms and tested on optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: No differences that require special attention Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR29229 has been deleted by kgv. SHA-1: 14f5f9a1e551460b60cffefc7cf48a0b3d202409 |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-10-14 18:12 | dbv | New Issue | |
2017-10-14 18:12 | dbv | Assigned To | => dbv |
2017-10-14 18:12 | dbv | Status | new => assigned |
2017-10-14 18:15 | git | Note Added: 0071493 | |
2017-10-14 18:17 | dbv | Note Added: 0071494 | |
2017-10-14 18:17 | dbv | Assigned To | dbv => ssv |
2017-10-14 18:17 | dbv | Status | assigned => resolved |
2017-10-14 19:05 | kgv | Summary | Crash at Poly_Triangulation::Normal => Mesh - Crash at Poly_Triangulation::Normal |
2017-10-14 19:08 | kgv | Product Version | 7.3.0 => 7.2.0 |
2017-10-14 19:08 | kgv | Target Version | 7.4.0 => 7.3.0 |
2017-10-14 19:10 | kgv | Note Added: 0071495 | |
2017-10-14 19:24 | git | Note Added: 0071496 | |
2017-10-14 19:25 | dbv | Note Added: 0071497 | |
2017-10-15 14:42 |
|
Note Added: 0071499 | |
2017-10-15 14:42 |
|
Assigned To | ssv => bugmaster |
2017-10-15 14:42 |
|
Status | resolved => reviewed |
2017-10-16 15:06 | bugmaster | Test case number | => Not required |
2017-10-16 15:10 | bugmaster | Note Added: 0071539 | |
2017-10-16 15:10 | bugmaster | Status | reviewed => tested |
2017-10-19 19:11 | bugmaster | Changeset attached | => occt master 4ea76aea |
2017-10-19 19:11 | bugmaster | Status | tested => verified |
2017-10-19 19:11 | bugmaster | Resolution | open => fixed |
2017-10-23 15:01 | git | Note Added: 0071711 | |
2018-06-29 21:15 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:19 |
|
Status | verified => closed |