0029229: Crash at Poly_Triangulation::Normal

Fixed creation of returning gp_Dir